<resources>
    <string name="app_name">cptonline</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">Incorrect username and password</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- URL strings -->
    <string name="url_get_login">http://35.188.97.91:8760/logins/</string>
    <string name="correct_password">login success</string>
    <string name="action_register">Register</string>
    <string name="url_post_login">http://35.188.97.91:8760/logins</string>
    <!--Grad Semester-->
    <string-array name="gradsemester">
        <item>spring</item>
        <item>summer</item>
        <item>fall</item>
    </string-array>
    <string name="gradsemester_prompt">Choose</string>
    <!--Grad year-->
    <string-array name="gradyear">
        <item>2017</item>
        <item>2018</item>
    </string-array>
    <string name="gradyear_prompt">Choose</string>
    <!--Radio buttons-->
    <string name="radio_yes">Yes</string>
    <string name="radio_no">No</string>
    <string name="radio_fulltime">Full-Time</string>
    <string name="radio_parttime">Part-Time</string>
    <string name="menu">menu</string>

    <string-array name="layers_array">
        <item>Logout</item>
    </string-array>
</resources>
